схема управляется из env

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # PostgreSQL Database Configuration
 DATABASE_URL=postgresql://postgres:password@localhost:5432/mydatabase
+DB_SCHEMA=public
 
 # Connection Pool Settings (optional)
 DB_POOL_MIN_SIZE=5
